# karamel

./: .gitignore  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README  README.md  SUMMARY.md  changes.md  code_of_conduct.md  contributing.md  contributors.md  rustfmt.toml
.github/workflows/: rust.yml
belgeler/dokumanlar/: README.md
dokumanlar/: README.md  hata_kodlari.md  liste.md  sayi.md  sayilar.md  sozluk.md  yazi.md
karamelapp/: Cargo.toml
karamelapp/src/: main.rs
karamellib/: Cargo.toml
karamellib/src/: constants.rs  lib.rs  types.rs
karamellib/src/buildin/: base_functions.rs  debug.rs  io.rs  mod.rs  num.rs  number.rs  opcode_class.rs
karamellib/src/buildin/class/: baseclass.rs  dict.rs  list.rs  mod.rs  number.rs  proxy.rs  text.rs
karamellib/src/buildin/primative_types/: mod.rs  number.rs  text.rs
karamellib/src/compiler/: ast.rs  compiler.rs  context.rs  function.rs  generator.rs  mod.rs  module.rs  scope.rs  static_storage.rs  storage_builder.rs  value.rs
karamellib/src/compiler/generator/: call.rs  compare.rs  constant.rs  function.rs  init_dict.rs  init_list.rs  jump.rs  load.rs  location.rs  location_group.rs  mod.rs  opcode_item.rs  store.rs
karamellib/src/constants/: mod.rs
karamellib/src/error/: mod.rs
karamellib/src/file/: mod.rs
karamellib/src/gc/: mod.rs
karamellib/src/logger/: mod.rs
karamellib/src/macros/: mod.rs
karamellib/src/parser/: comment.rs  line.rs  mod.rs  number.rs  operator.rs  symbol.rs  text.rs  whitespace.rs
karamellib/src/syntax/: assignment.rs  binary.rs  block.rs  control.rs  expression.rs  func_call.rs  function_defination.rs  function_return.rs  if_condition.rs  load_module.rs  loop_item.rs  loops.rs  mod.rs  newline.rs  primative.rs  statement.rs  unary.rs  util.rs  while_loop.rs
karamellib/src/vm/: executer.rs  interpreter.rs  mod.rs
karamellib/test_files/: fail_func_call_1.tpd  pass_bool.tpd  pass_dict_1.tpd  pass_dict_2.tpd  pass_dict_3.tpd  pass_dict_4.tpd  pass_dict_5.tpd  pass_dict_7.k  pass_dict_7.tpd  pass_dict_8.tpd  pass_dict_fonk_1.k  pass_func_call_1.k  pass_func_call_1.tpd  pass_func_call_2.tpd  pass_func_call_3.k  pass_func_call_3.tpd  pass_if_1.k  pass_if_2.k  pass_list_1.tpd  pass_list_2.k  pass_list_3.tpd  pass_list_4.tpd  pass_list_5.k  pass_list_6.k  pass_list_7.k  pass_loop_1.k  pass_loop_2.k  pass_loop_3.k  pass_loop_4.k  pass_modulo.k  pass_number.k  pass_test_1.k  pass_test_1.tpd  pass_test_2.k  pass_test_3.k  pass_test_4.tpd  pass_test_5.tpd  pass_test_6.tpd  pass_test_8.tpd  pass_text.k  (+1 more)
karamellib/test_modules/fail_module_1/: baz.k
karamellib/test_modules/pass_module_1/: baz.k
karamellib/test_modules/pass_module_2/: baz.k
karamellib/test_modules/pass_module_3/: baz.k  hesapmakinesi.k
karamellib/test_modules/pass_sub_module_1/: hata.k
karamellib/test_modules/pass_sub_module_1/hesapmakinesi/: baz.k
karamellib/test_modules/pass_sub_module_2/: baz.k
karamellib/test_modules/pass_sub_module_2/foo/bar/: baz.k
karamellib/test_modules/pass_sub_module_3/: baz.k
karamellib/test_modules/pass_sub_module_3/foo/bar/baz/more/: baz.k
karamellib/tests/: assignment_tests.rs  binary_tests.rs  block_test.rs  compiler_tests.rs  control_tests.rs  endless_loop_tests.rs  func_call_tests.rs  function_defination_tests.rs  if_stmt_tests.rs  indentation_tests.rs  parser.rs  syntax_primative.rs  test_executers.rs  test_file_tests.rs  types.rs  unary_tests.rs  vm_tests.rs
karamelweb/: Cargo.toml  build_command
karamelweb/src/: lib.rs
karamelweb/src/www/: index.html
karamelweb/src/www/pkg/: karamelweb.js  karamelweb_bg.wasm
libtpd/: Cargo.toml
libtpd/src/: lib.rs
libtpd/src/buildin/: base_functions.rs  debug.rs  io.rs  mod.rs  num.rs  opcode_class.rs
libtpd/src/compiler/: compiler.rs  function.rs  static_storage.rs  value.rs
libtpd/src/logger/: mod.rs
libtpd/src/parser/: operator.rs  symbol.rs  text.rs
libtpd/src/syntax/: binary.rs  expression.rs  func_call.rs  mod.rs  util.rs
libtpd/src/vm/: executer.rs  interpreter.rs
libtpd/src/web/: mod.rs
libtpd/test_files/: pass_dict_4.tpd  pass_dict_5.tpd  pass_dict_6.tpd  pass_test_5.tpd  pass_test_6.tpd
libtpd/tests/: assignment_tests.rs  binary_tests.rs  block_test.rs  compiler_tests.rs  control_tests.rs  endless_loop_tests.rs  func_call_tests.rs  function_defination_tests.rs  if_stmt_tests.rs  indentation_tests.rs  parser.rs  syntax_primative.rs  test_file_tests.rs  types.rs  unary_tests.rs  vm_tests.rs
soezluek/: denk-soezluek.md  genel-soezluek.md  kpd-terim-soezluegue.md
sozlukler/: bilisim-terimleri-sozlugu.md
src/: csv.pest  karamel.pest  lib.rs  main.rs  newl.new  parser.rs  parser.rs123.rs  types.rs
test_files/: fail_test_1.tpd  fail_test_2.tpd  pass_dict_1.tpd  pass_func_call_1.tpd  pass_func_call_3.tpd  pass_test_1.tpd  pass_test_3.tpd  pass_test_4.tpd  pass_test_8.tpd
tests/: add_subtract_tests.rs  assignment_tests.rs  binary_tests.rs  block_test.rs  compiler_tests.rs  control_tests.rs  endless_loop_tests.rs  func_call_tests.rs  function_defination_tests.rs  if_stmt_tests.rs  indentation_tests.rs  modulo_tests.rs  multiply_divide_tests.rs  parser.rs  syntax_primative.rs  test_file_tests.rs  types.rs  unary_tests.rs  vm_tests.rs
tpdapp/: Cargo.toml
tpdweb/: Cargo.toml  build_command
tpdweb/src/: lib.rs
tpdweb/src/www/: index.html
www/: index.html
(+101 files in other folders)
