[package]
name = "tpd"
version = "0.1.0"
authors = ["Erhan BARIS <erhanbaris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dumpExecutionOpcode = []
dumpMemory = []
dumpOpcodes = []
liveOpcodeView = []
wasmBuild = []
default = ["dumpOpcodes", "dumpMemory", "dumpExecutionOpcode"]

[dependencies]
wasm-bindgen = "0.2"
bitflags = "1.2"
termion = "*"
log-update = "*"


[lib]
crate-type = ["cdylib", "rlib"]


[[test]]
name = "tpd-tests"
edition = "2018"
path = "tests/mod.rs"
required-features = []
