[package]
name = "tpd"
version = "0.1.0"
authors = ["Erhan BARIS <erhanbaris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dumpExecutionOpcode = []
dumpMemory = []
dumpOpcodes = []
liveOpcodeView = []
wasmBuild = []
test = []
default = ["dumpOpcodes", "dumpMemory", "dumpExecutionOpcode"]

[dependencies]
wasm-bindgen = "0.2"
bitflags = "1.2"
log-update = "*"

[target.'cfg(not(windows))'.dependencies]
termion = "*"

[lib]
crate-type = ["cdylib", "rlib"]
