[package]
name = "karamellib"
version = "0.1.0"
authors = ["Erhan BARIS <erhanbaris@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
log-update = "*"
colored = "2"
log = "0.4.14"
lazy_static = "1.4.0"
unicode-width = "0.2.0"
levenshtein = "1.0.5"


# For enum
strum = "0.26.0"
strum_macros = "0.26.0"
thiserror = "2.0.0"

[features]
dumpExecutionOpcode = []
NONONO = []
dumpMemory = []
dumpOpcodes = []
liveOpcodeView = []
wasmBuild = []
unittest = []
default = []

dbg = []
dbg_level1 = []
dbg_level2 = []
dbg_level3 = []

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false