[package]
name = "karamelweb"
version = "0.1.0"
authors = ["Erhan BARIS <erhanbaris@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
karamellib = { path = "../karamellib" }
wasm-bindgen = "0.2"
js-sys = "0.3.47"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false