[package]
name = "libtpd"
version = "0.1.0"
authors = ["Erhan BARIS <erhanbaris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
bitflags = "1.2"
log-update = "*"
colored = "2"

[features]
dumpExecutionOpcode = []
dumpMemory = []
dumpOpcodes = []
liveOpcodeView = []
wasmBuild = []
unittest = []
default = ["dumpOpcodes", "dumpMemory", "dumpExecutionOpcode"]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false